--- a/www/css/default.css
+++ b/www/css/default.css
@@ -17,11 +17,17 @@ img{
 }
 
 /*SLIDER DOS PRODUTOS*/
-	.swiper-container {
-	    width: 100%;
-	    height: auto;
-	} 
-
+	#owl-demo .item{
+	  background: #a1def8;
+	  padding: 30px 0px;
+	  display: block;
+	  margin: 5px;
+	  color: #FFF;
+	  -webkit-border-radius: 3px;
+	  -moz-border-radius: 3px;
+	  border-radius: 3px;
+	  text-align: center;
+	}
 
 /*TBODY PROD CAMP*/
 	#tbody-prod-camp #img{
@@ -32,6 +38,7 @@ img{
 		position: absolute;
 		right: 0;
 		width: 40%;
+		color: white;
 	}
 
 	#tbody-prod-camp #valor-desconto{
@@ -58,4 +65,5 @@ img{
 	#tbody-prod-camp #preco_antigo{
 		/*text-decoration: line-through;*/
 	}
+
 
